Fix issue demonstrated by onemeasure over multiple times the same underlyingmeasure